# Ex3

./: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  DefaultLogic.cpp  DefaultLogic.h  Game.cpp  Game.h  GameFlow.cpp  GameLogic.cpp  GameLogic.h  GameMenu.cpp  GameMenu.h  MultiPlayerFlow.cpp  MultiPlayerFlow.h  ReversiGame.cpp  ReversiGame.h  ReversiGameMenu.cpp  SinglePlayerFlow.cpp  SinglePlayerFlow.h  main.cpp
include/: Board.h  Cell.h  GameFlow.h  GameLogic.h  MultiPlayerFlow.h  ReversiGameMenu.h  SinglePlayerFlow.h
src/: Board.cpp  Cell.cpp  DefaultLogic.cpp  Game.cpp  GameFlow.cpp  GameLogic.cpp  GameMenu.cpp  MultiPlayerFlow.cpp  ReversiGame.cpp  ReversiGameMenu.cpp  SinglePlayerFlow.cpp
test/: CMakeLists.txt  boardState.txt  gtest_main.cpp  test_DefaultLogic.cpp
test/ReversiTests/: BoardTest.cpp  BoardTest.h  CMakeLists.txt  UpdateBoardTest.cpp  UpdateBoardTest.h  WinOrLoseTest.cpp  WinOrLoseTest.h  test_DefaultLogic.cpp  test_MultiPlayerFlow.cpp.cpp
